2013-08-16  Arunprasad Rajkumar  <arurajku@cisco.com>

        <https://webkit.org/b/119912> Fix WebKit build error when SVG is disabled(broken since r154174)

        Reviewed by Simon Fraser.

        No new tests required, just a build fix.

        Since r154174 CSS keywords alpha and luminance used by -webkit-mask-source-type. Move those
        keywords from SVGCSSValueKeywords.in to CSSValueKeywords.in.

        * css/CSSValueKeywords.in:
        * css/SVGCSSValueKeywords.in:

2013-08-16  Arunprasad Rajkumar  <arurajku@cisco.com>

        <https://webkit.org/b/119785> Replace currentTime() with monotonicallyIncreasingTime() in WebCore

        Reviewed by Alexey Proskuryakov.

        WTF::currentTime() is prone to DST changes and NTP adjustments, so use
        WTF::monotonicallyIncreasingTime() to measure elapsed time.
        
        * Modules/filesystem/FileWriter.cpp:
        (WebCore::FileWriter::didWrite):
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::elapsedTime):
        (WebCore::Document::resetLastHandledUserGestureTimestamp):
        * dom/Element.cpp:
        (WebCore::Element::setActive):
        * fileapi/FileReader.cpp:
        (WebCore::FileReader::didReceiveData):
        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::HTMLMediaElement):
        (WebCore::HTMLMediaElement::startProgressEventTimer):
        (WebCore::HTMLMediaElement::progressEventTimerFired):
        (WebCore::HTMLMediaElement::refreshCachedTime):
        (WebCore::HTMLMediaElement::invalidateCachedTime):
        (WebCore::HTMLMediaElement::currentTime):
        (WebCore::HTMLMediaElement::startPlaybackProgressTimer):
        (WebCore::HTMLMediaElement::scheduleTimeupdateEvent):
        * html/HTMLMediaElement.h:
        * html/HTMLPlugInImageElement.cpp:
        (WebCore::documentHadRecentUserGesture):
        * html/MediaController.cpp:
        (MediaController::scheduleTimeupdateEvent):